--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width,
                                    initial-scale=1.0">
     <title>My PWA</title>
-    <link rel="stylesheet" href="styles.css">
 	<link rel="manifest" href="manifest.json">
 	<script src="app.js"></script>
 </head>
 <body>
-<h2>Welcome to cat PWA</h2>
+<h2>Welcome to cat PWA V3</h2>
     <p>This is a simple Progressive Web App example.</p>
 
 
