--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
                                    initial-scale=1.0">
     <title>My PWA</title>
 	<link rel="manifest" href="manifest.json">
+	<link rel="icon" type="image/x-icon" href="/icons/favicon.ico">
 	<script src="app.js"></script>
 </head>
 <body>
-<h2>Welcome to cat PWA V6</h2>
+<h2>Welcome to cat PWA V7</h2>
     <p>This is a simple Progressive Web App example.</p>
 
 
