--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
 <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,
                                    initial-scale=1.0">
-    <title>My PWA</title>
+    <title>Cat PWA</title>
 	<link rel="manifest" href="manifest.json">
 	<link rel="icon" type="image/x-icon" href="/icons/favicon.ico">
+	<link rel="stylesheet" href="styles.css">
 	<script src="app.js"></script>
 </head>
 <body>
-<h2>Welcome to cat PWA V7</h2>
+<h2>Welcome to cat PWA V8</h2>
     <p>This is a simple Progressive Web App example.</p>
-
-
 </body>
 </html>
