--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<script src="app.js"></script>
 </head>
 <body>
-<h2>Welcome to cat PWA V9</h2>
-<p>This is a simple Progressive Web App example.</p>
+<h2>Welcome to cat PWA V10</h2>
+<h3>This is a simple Progressive Web App example.</h3>
 </body>
 </html>
