--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,
-                                   initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cat PWA</title>
 	<link rel="manifest" href="manifest.json">
 	<link rel="icon" type="image/x-icon" href="/icons/favicon.ico">
@@ -11,7 +10,7 @@
 	<script src="app.js"></script>
 </head>
 <body>
-<h2>Welcome to cat PWA V10</h2>
+<h2>Welcome to cat PWA V11</h2>
 <h3>This is a simple Progressive Web App example.</h3>
 </body>
 </html>
