--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
 <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cat PWA</title>
+    <title>Кот-PWA</title>
 	<link rel="manifest" href="manifest.json">
 	<link rel="icon" type="image/x-icon" href="/icons/favicon.ico">
 	<link rel="stylesheet" href="styles.css">
 	<script src="app.js"></script>
 </head>
 <body>
-<h2>Welcome to cat PWA V12</h2>
-<h3>This is a simple Progressive Web App example.</h3>
+<div class="container">
+	<h1>Добро пожаловать на страницу со смешным котом!!!</h1>
+	<p>Пока что он ничего не делает, но потом будет генерировать пароли (или что там по лабораторной работе надо...)</p>
+	<img class="cat" src='icons/cat.jpg' alt="cat"/>
+</div>
 </body>
 </html>
