--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Кот-PWA</title>
+    <title>Кот-ПВА</title>
 	<link rel="manifest" href="manifest.json">
 	<link rel="icon" type="image/x-icon" href="icons/favicon.ico">
 	<link rel="stylesheet" href="styles.css">
@@ -12,7 +12,7 @@
 <body onload="onLoad()">
 <div class="container">
 	<h1>Добро пожаловать на страницу со смешным котом!!!</h1>
-	<p>Этот невероятный смешной кот умеет сохранять ваш логин и пароль локально. Введите их в поля ниже, а затем нажмите на кнопку.</p>
+	<p>Этот невероятный, смешной кот умеет сохранять ваш логин и пароль локально. Введите их в поля ниже, а затем нажмите на кнопку.</p>
 	<p>Я вас уверяю, это совершенно точно безопасно!</p>
 	<form id="input_form">
 		<label for="login">Введите ваш логин:</label>
